Show Perlin noise map using Konva.js

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<div id="header">
 		<h1>Swarm Game</h1>
 	</div>
-	<canvas id="scratch" width="400px" height="400px" style="width: 400px; height: 400px;"></canvas>
-
+	<div id="scratch" style="width: 500px; height: 500px;"></div>
+    <canvas id="minimap" width="50px" height="50px" style="display: none; width: 50px; height: 50px;"></canvas>
 	<hr>
-	<div>Powered by ??</div>
+	<div>Powered by <a href="https://konvajs.org/">Konva.js</a><div>
 </body>
 </html>
