Extract and plot border lines thanks to MarchingSquaresJS

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<div id="scratch" style="width: 500px; height: 500px;"></div>
     <canvas id="minimap" width="50px" height="50px" style="display: none; width: 50px; height: 50px;"></canvas>
 	<hr>
-	<div>Powered by <a href="https://konvajs.org/">Konva.js</a><div>
+    <div>Powered by <a href="https://konvajs.org/">Konva.js</a> and
+        <a href="https://github.com/RaumZeit/MarchingSquares.js/tree/master">MarchingSquares.js</a><div>
 </body>
 </html>
