Add Delaunay triangulation from simplified border lines

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <hr>
     <div>Source on <a href="https://github.com/msakuta/swarm-js">GitHub</a>.</div>
     <div>Powered by <a href="https://konvajs.org/">Konva.js</a>,
-        <a href="https://github.com/RaumZeit/MarchingSquares.js/tree/master">MarchingSquares.js</a> and
-        <a href="http://mourner.github.io/simplify-js/">simplify.js</a>.<div>
+        <a href="https://github.com/RaumZeit/MarchingSquares.js/tree/master">MarchingSquares.js</a>,
+        <a href="https://mourner.github.io/simplify-js/">simplify.js</a> and
+        <a href="https://github.com/mapbox/delaunator">Delaunator</a>.<div>
 </body>
 </html>
