--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<h1>Swarm Game</h1>
     </div>
     <div id="scratch"></div>
-    <canvas id="minimap" width="50px" height="50px" style="display: none; width: 50px; height: 50px;"></canvas>
+    <div id="minimapContainer"></div>
     <hr>
     <div>Source on <a href="https://github.com/msakuta/swarm-js">GitHub</a>.</div>
     <div>Powered by <a href="https://konvajs.org/">Konva.js</a>,
