Add a switch to toggle visibility of triangulation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 	<div id="header">
 		<h1>Swarm Game</h1>
     </div>
+    <div>
+        <input type="checkbox" id="triangulationVisible" checked>
+        <label for="triangulationVisible">Triangulation Visible</label>
+    </div>
     <div id="scratch"></div>
     <div id="minimapContainer"></div>
     <hr>
