Add an option to toggle connection lines between triangles

--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
 		<h1>Swarm Game</h1>
     </div>
     <div>
-        <input type="checkbox" id="triangulationVisible" checked>
-        <label for="triangulationVisible">Triangulation Visible</label>
+        <label>
+            <input type="checkbox" id="triangulationVisible" checked>
+            Triangulation Visible
+        </label>
+    </div>
+    <div>
+        <label>
+            <input type="checkbox" id="connectionVisible" checked>
+            Connection Visible
+        </label>
     </div>
     <div id="scratch"></div>
     <div id="minimapContainer"></div>
