Add path visible checkbox and reorganize layers for efficiency

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             Connection Visible
         </label>
     </div>
+    <div>
+        <label>
+            <input type="checkbox" id="pathVisible" checked>
+            Path Visible
+        </label>
+    </div>
     <div id="scratch"></div>
     <div id="minimapContainer"></div>
     <hr>
