Show very basic input/output port list

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             user-select: none;
             pointer-events: none;
         }
+
+        .draggable {
+            cursor: move;
+        }
     </style>
 </head>
 <body id="body">
