--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div id="scratch"></div>
     <div id="minimapContainer"></div>
-    <div id="treeContainer"></div>
+    <div id="treeContainer" style="overflow: auto"></div>
     <hr>
     <div>Source on <a href="https://github.com/msakuta/swarm-js">GitHub</a>.</div>
     <div>Powered by <a href="https://konvajs.org/">Konva.js</a>,
