Make behavior tree nodes draggable, but port connectors don't follow

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         .draggable {
             cursor: move;
         }
+
+        .nondraggable {
+            pointer-events: none;
+        }
     </style>
 </head>
 <body id="body">
