Add text fields to edit input/output ports

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             pointer-events: none;
         }
 
+        #treeContainer {
+            position: relative;
+        }
+
         .draggable {
             cursor: move;
         }
