Show new connection path when dragging from childPort

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             -moz-user-select: none;
             -ms-user-select: none;
             user-select: none;
+        }
+
+        svg text.nomouse{
             pointer-events: none;
         }
 
