Add delete agents button to clear the game state with new behaviortree

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </div>
     <div id="scratch"></div>
     <div id="minimapContainer"></div>
+    <input type="button" id="clearAgents" value="Clear Agents">
     <div id="treeContainer" style="overflow: auto"></div>
     <hr>
     <div>Source on <a href="https://github.com/msakuta/swarm-js">GitHub</a>.</div>
