--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Swarm Game</title>
     <!-- <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script> -->
-    <script type="text/javascript" src="build/index.min.js"></script>
+    <script type="text/javascript" src="index.min.js"></script>
     <style>
         body{
             background-color: #000;
@@ -42,6 +42,7 @@
     </div>
     <div id="scratch"></div>
     <div id="minimapContainer"></div>
+    <div id="treeContainer"></div>
     <hr>
     <div>Source on <a href="https://github.com/msakuta/swarm-js">GitHub</a>.</div>
     <div>Powered by <a href="https://konvajs.org/">Konva.js</a>,
