--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,10 @@
             height: 500px;
             display: inline-block;
         }
+
+        #treeContainer{
+            position: relative;
+        }
     </style>
 </head>
 <body id="body">
