--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,23 @@
         #treeContainer{
             position: relative;
         }
+
+        /* Class that prevents text selection by mouse dragging.
+        The style is not defined by standard, so we'd write down browser-dependent styles for major browsers.
+        Support by IE11 is somewhat incomplete since Ctrl+A selects the text in elements even with this style. */
+        .noselect{
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none;   /* Chrome/Safari/Opera */
+            -khtml-user-select: none;    /* Konqueror */
+            -moz-user-select: none;      /* Firefox */
+            -ms-user-select: none;       /* IE/Edge */
+            user-select: none;           /* non-prefixed version, currently
+                                        not supported by any browser */
+        }
+
+        .nomouse{
+            pointer-events: none;
+        }
     </style>
 </head>
 <body id="body">
